Source/WebCore/platform/mac/DragImageMac.mm
@@ -29,6 +29,7 @@
 #if ENABLE(DRAG_SUPPORT) && PLATFORM(MAC)
 
 #import "BitmapImage.h"
+#import "ColorMac.h"
 #import "Element.h"
 #import "FloatRoundedRect.h"
 #import "FontCascade.h"
@@ -36,6 +37,8 @@
 #import "FontSelector.h"
 #import "GraphicsContext.h"
 #import "Image.h"
+#import "LocalDefaultSystemAppearance.h"
+#import "Page.h"
 #import "StringTruncator.h"
 #import "TextIndicator.h"
 #import "URL.h"
@@ -294,9 +297,13 @@ LinkImageLayout::LinkImageLayout(URL& url, const String& titleString)
     boundingRect.setHeight((static_cast<int>(boundingRect.height() / 2) * 2));
 }
 
-DragImageRef createDragImageForLink(Element&, URL& url, const String& title, TextIndicatorData&, FontRenderingMode, float deviceScaleFactor)
+DragImageRef createDragImageForLink(Element& element, URL& url, const String& title, TextIndicatorData&, FontRenderingMode, float deviceScaleFactor)
 {
     LinkImageLayout layout(url, title);
+
+    Page* page = element.document().page();
+
+    LocalDefaultSystemAppearance localAppearance(true, page ? page->defaultAppearance() : true);
 
     auto imageSize = layout.boundingRect.size();
 #if __MAC_OS_X_VERSION_MIN_REQUIRED < 101300
@@ -314,7 +321,7 @@ DragImageRef createDragImageForLink(Element&, URL& url, const String& title, Tex
     context.translate(linkImageShadowRadius, linkImageShadowRadius - linkImageShadowOffsetY);
     context.setShadow({ 0, linkImageShadowOffsetY }, linkImageShadowRadius, { 0.f, 0.f, 0.f, .25 });
 #endif
-    context.fillRoundedRect(FloatRoundedRect(layout.boundingRect, FloatRoundedRect::Radii(linkImageCornerRadius)), Color::white);
+    context.fillRoundedRect(FloatRoundedRect(layout.boundingRect, FloatRoundedRect::Radii(linkImageCornerRadius)), colorFromNSColor([NSColor controlBackgroundColor]));
 #if __MAC_OS_X_VERSION_MIN_REQUIRED < 101300
     context.clearShadow();
 #endif
